--- a/package.json
+++ b/package.json
@@ -23,33 +23,33 @@
 	"license": "MIT",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.0",
-		"express": "^4.18.2",
-		"cors": "^2.8.5",
-		"helmet": "^7.1.0",
-		"morgan": "^1.10.0",
-		"zod": "^3.22.4",
-		"jsonwebtoken": "^9.0.2",
 		"bcryptjs": "^2.4.3",
-		"dotenv": "^16.3.1",
-		"uuid": "^9.0.1",
 		"compression": "^1.7.4",
-		"rate-limiter-flexible": "^4.0.1"
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"helmet": "^7.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"morgan": "^1.10.0",
+		"rate-limiter-flexible": "^4.0.1",
+		"uuid": "^9.0.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.21",
-		"@types/cors": "^2.8.17",
-		"@types/morgan": "^1.9.9",
-		"@types/node": "^20.10.4",
-		"@types/jsonwebtoken": "^9.0.5",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/compression": "^1.8.1",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^4.17.21",
+		"@types/jest": "^29.5.14",
+		"@types/jsonwebtoken": "^9.0.10",
+		"@types/morgan": "^1.9.10",
+		"@types/node": "^20.10.4",
 		"@types/uuid": "^9.0.7",
-		"@types/compression": "^1.7.5",
-		"@types/jest": "^29.5.8",
-		"typescript": "^5.3.2",
-		"tsx": "^4.6.2",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
 		"jest": "^29.7.0",
-		"ts-jest": "^29.1.1"
+		"ts-jest": "^29.1.1",
+		"tsx": "^4.6.2",
+		"typescript": "^5.3.2"
 	}
 }
