--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
+		"nodemailer": "^7.0.3",
 		"rate-limiter-flexible": "^4.0.1",
 		"uuid": "^9.0.1",
 		"zod": "^3.22.4"
@@ -45,6 +46,7 @@
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/morgan": "^1.9.10",
 		"@types/node": "^20.10.4",
+		"@types/nodemailer": "^6.4.17",
 		"@types/uuid": "^9.0.7",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
