--- a/.env
+++ b/.env
@@ -21,3 +21,17 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS
 CORS_ORIGIN=http://localhost:3000
+
+# Configuración SMTP para emails
+SMTP_HOST=menuteca.mobile.app@gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=menuteca.mobile.app@gmail.com
+SMTP_PASS=fyv_qmv!GTM!gqc9uzf
+
+# Información del remitente
+FROM_NAME=Menuteca
+FROM_EMAIL=menuteca.mobile.app@gmail.com
+
+# URL del frontend (para enlaces en emails)
+FRONTEND_URL=http://localhost:3000
